--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
   "postinstall": "puppeteer install",
     "format": "prettier --write .",
-    "start": "nodemon app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
