--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-  "postinstall": "puppeteer install",
+    "postinstall": "node node_modules/puppeteer/install.js",
     "format": "prettier --write .",
     "start": "node app.js",
     "dev": "nodemon app.js",
