--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "An api for capturing screenshot of a webpage and sending it to client for downloading.",
   "main": "app.js",
   "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "postinstall": "node node_modules/puppeteer/install.js",
+    "postinstall": "node -e \"try { if (!process.env.PUPPETEER_SKIP_CHROMIUM_DOWNLOAD) require('puppeteer/install'); else console.log('Skipping Puppeteer download'); } catch (e) { console.warn('Puppeteer post-install script skipped:', e.message); }\"",
     "format": "prettier --write .",
     "start": "node app.js",
     "dev": "nodemon app.js",
@@ -21,14 +24,14 @@
   "author": "Akshat Jain",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.5.0",
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "multer": "^2.0.0",
-    "prettier": "^3.5.3",
-    "puppeteer": "^24.10.0",
-    "url": "^0.11.4",
-    "zod": "^3.25.46"
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "prettier": "^2.8.8",
+    "puppeteer": "^21.9.0",
+    "url": "^0.11.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
